js/js.translator/testData/incremental/invalidation/class/main/testToString.kt
fun testToString(d: Demo): String {
    return d.toString()
}
